# rc-monitor

./: .gitignore  CLAUDE.md  CMakeLists.txt  GHIDRA_GUIDE.md  RC_MONITORING_SPEC.md  README.md
.github/workflows/: ci.yml
emulator/: rc_emulator.c
include/: rc_monitor.h
java/com/dji/rcmonitor/: DussStreamReader.java  InputEventReader.java  LocalSocketReader.java  RcMonitor.java  RcReader.java  RcReaderChain.java  UsbRcReader.java
java/space/yasha/rcmonitor/: DussStreamReader.java  InputEventReader.java  LocalSocketReader.java  RcMonitor.java  RcReader.java  RcReaderChain.java  UsbRcReader.java
src/: rc_monitor.c  rc_monitor_jni.c
test/: fuzz.dict  fuzz_build_packet.c  fuzz_feed.c  fuzz_payload.c  gen_corpus.c  test_rc_monitor.c  verify_recording.c
